syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/vbua/user_management/proto/userpb";

message User {
  uint64 id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
}

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
  rpc ListUsers(ListUsersRequest) returns (ListUsersResponse) {}
}

message CreateUserRequest {
  User user = 1;
}

message CreateUserResponse {
  uint64 id = 1;
}

message DeleteUserRequest {
  uint64 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message ListUsersRequest {}

message ListUsersResponse {
  repeated User users = 1;
}